bk_ida/gccida/c0/init_c_lex
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:582:32: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->line_change = ( void ( *)( cpp_reader_0 *, const cpp_token_0 *, int))cb_line_change; 
                               ^~~~~~~~~~~~
                               cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:582:54: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cb->line_change = ( void ( *)( cpp_reader_0 *, const cpp_token_0 *, int))cb_line_change; 
                                                     ^~~~~~~~~~~
                                                     cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:583:26: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->ident = ( void ( *)( cpp_reader_0 *, unsigned int, const cpp_string_0 *))cb_ident; 
                         ^~~~~~~~~~~~
                         cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:583:62: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
cb->ident = ( void ( *)( cpp_reader_0 *, unsigned int, const cpp_string_0 *))cb_ident; 
                                                             ^~~~~~~~~~~~
                                                             cpp_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:584:32: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->file_change = ( void ( *)( cpp_reader_0 *, const  struct line_map *))cb_file_change; 
                               ^~~~~~~~~~~~
                               cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:585:31: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->def_pragma = ( void ( *)( cpp_reader_0 *, unsigned int))cb_def_pragma; 
                              ^~~~~~~~~~~~
                              cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:586:6: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( debug_info_level_0 == DINFO_LEVEL_VERBOSE 
     ^~~~~~~~~~~~~~~~~~
     debug_info_level
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:589:27: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->define = ( void ( *)( cpp_reader_0 *, unsigned int, cpp_hashnode_0 *))cb_define; 
                          ^~~~~~~~~~~~
                          cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:589:57: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cb->define = ( void ( *)( cpp_reader_0 *, unsigned int, cpp_hashnode_0 *))cb_define; 
                                                        ^~~~~~~~~~~~~~
                                                        cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:590:26: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cb->undef = ( void ( *)( cpp_reader_0 *, unsigned int, cpp_hashnode_0 *))cb_undef; 
                         ^~~~~~~~~~~~
                         cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:590:56: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cb->undef = ( void ( *)( cpp_reader_0 *, unsigned int, cpp_hashnode_0 *))cb_undef; 
                                                       ^~~~~~~~~~~~~~
                                                       cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/c-lex.c:594:14: error: use of undeclared identifier 'arg0'
filenamea = &arg0; 
             ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_c_lex/src/obj/c-lex.o] Error 1
